Add add article api

--- a/接口文档/大事件接口文档.md
+++ b/接口文档/大事件接口文档.md
@@ -336,7 +336,7 @@ https://big-event-gwd.oss-cn-beijing.aliyuncs.com/9bf1cf5b-1420-4c1b-91ad-e0f463
 
 
 
-## 2. 文章分类相关接口
+# 2. 文章分类相关接口
 
 ### 2.1 新增文章分类
 
